--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
     			ball.x = 50;
     			ball.y = 50;
 
+    			create.Tween.get(ball, {loop: true}).to({x:450}, 3000, create.Ease.bounceOut).to({x:50}, 3000, create.Ease.bounceOut);
+    			create.Ticker.addEventListener('tick', tick);
+
+
+
     			stage.addChild(ball);
     			stage.update();
     		}
 
+    		function tick() {
+    			stage.update();
+    		}
+
     		init();
-    		
+
     	})(createjs);
     </script>
   </body>
